<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterUser">


    <EditText
        android:id="@+id/input_name"
        android:layout_width="328dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="144dp"
        android:background="@drawable/input_main"
        android:ems="10"
        android:inputType="text"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/name_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_name" />


    <EditText
        android:id="@+id/input_lastname"
        android:layout_width="328dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_main"
        android:ems="10"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_name" />

    <TextView
        android:id="@+id/txt_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/lastname_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_lastname" />

    <EditText
        android:id="@+id/input_username"
        android:layout_width="328dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_main"
        android:ems="10"
        android:inputType="text"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_lastname" />

    <TextView
        android:id="@+id/txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/username_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_username" />

    <EditText
        android:id="@+id/input_birthdate"
        android:layout_width="328dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_main"
        android:ems="10"
        android:inputType="datetime"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_username" />

    <TextView
        android:id="@+id/txt_birthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/birthday_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_birthdate" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="328dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_main"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/email_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_main"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_birthdate" />

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/passsword_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />

    <EditText
        android:id="@+id/input_cpassword"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_main"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_birthdate" />

    <TextView
        android:id="@+id/txt_cpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="216dp"
        android:text="@string/cpassword_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_cpassword" />

    <ImageView
        android:id="@+id/img_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn_back"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="151dp"
        android:layout_height="50dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="28dp"
        android:text="@string/btn_back"
        android:textAllCaps="false"
        android:textColor="@color/purple_800"
        app:layout_constraintEnd_toStartOf="@+id/btn_signin"
        app:layout_constraintTop_toBottomOf="@+id/input_email"
        app:strokeColor="@color/purple_800"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="151dp"
        android:layout_height="50dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/purple_800"
        android:backgroundTintMode="add"
        android:text="@string/btn_signup"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email" />

    <Button
        android:id="@+id/btn_loadimage"
        android:layout_width="324dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="@color/purple_800"
        android:backgroundTintMode="add"
        android:text="@string/btn_loadimage"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email" />

</androidx.constraintlayout.widget.ConstraintLayout>