<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">


    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="154dp"
        android:layout_height="154dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btn_createlocal"
        android:layout_width="151dp"
        android:layout_height="50dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="244dp"
        android:backgroundTint="@color/purple_800"
        android:backgroundTintMode="add"
        android:text="@string/btn_createlocal"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="151dp"
        android:layout_height="50dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="244dp"
        android:backgroundTint="@color/purple_800"
        android:backgroundTintMode="add"
        android:text="@string/btn_logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />




    <Button
        android:id="@+id/btn_editprofile2"
        android:layout_width="151dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="244dp"
        android:backgroundTint="@color/purple_800"
        android:backgroundTintMode="add"
        android:text="@string/btn_editprofile"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <Button
        android:id="@+id/btn_back"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="151dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="28dp"
        android:text="@string/btn_back"
        android:textAllCaps="false"
        android:textColor="@color/purple_800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/purple_800"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>