<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="193dp"
        android:layout_height="175dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="76dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="52dp"
        android:backgroundTint="@color/purple_800"
        android:backgroundTintMode="add"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="224dp"
        android:backgroundTint="@color/purple_800"
        android:backgroundTintMode="add"
        android:text="@string/btn_signup"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:strokeColor="@color/purple_800"
        app:strokeWidth="2dp" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="328dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_main"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="328dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/input_main"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/email_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email" />

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/passsword_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />

    <Button
        android:id="@+id/btn_forgetpassword"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="207dp"
        android:layout_height="52dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="72dp"
        android:text="@string/btn_forgetpassword"
        android:textAllCaps="false"
        android:textColor="@color/purple_800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
</androidx.constraintlayout.widget.ConstraintLayout>