<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInLocal">


    <EditText
        android:id="@+id/input_open_days_shop"
        android:layout_width="328dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_main"
        android:ems="10"
        android:inputType="text"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_adress_shop" />

    <EditText
        android:id="@+id/input_schedule"
        android:layout_width="328dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/input_main"
        android:ems="10"
        android:inputType="text"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_adress_shop" />

    <TextView
        android:id="@+id/txt_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="72dp"
        android:text="Schedule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_open_days_shop" />

    <TextView
        android:id="@+id/txt_open_days_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/open_days_shop_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_open_days_shop" />

    <EditText
        android:id="@+id/input_name_shop"
        android:layout_width="328dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/input_main"
        android:ems="10"
        android:inputType="text"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/txt_name_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/name_shop_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_name_shop" />


    <EditText
        android:id="@+id/input_adress_shop"
        android:layout_width="328dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_main"
        android:ems="10"
        android:inputType="text"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_name_shop" />

    <TextView
        android:id="@+id/txt_adress_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/adress_shop_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_adress_shop" />


    <Button
        android:id="@+id/btn_loadimage"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/purple_800"
        android:backgroundTintMode="add"
        android:text="@string/btn_loadimage"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_schedule" />

    <Button
        android:id="@+id/btn_back"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="151dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btn_back"
        android:textAllCaps="false"
        android:textColor="@color/purple_800"
        app:layout_constraintEnd_toStartOf="@+id/btn_signin"
        app:layout_constraintTop_toBottomOf="@+id/btn_loadimage"
        app:strokeColor="@color/purple_800"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="151dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/purple_800"
        android:backgroundTintMode="add"
        android:text="@string/btn_signup"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_loadimage" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="162dp"
        android:layout_height="152dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>