<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="154dp"
        android:layout_height="154dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


    <EditText
        android:id="@+id/input_name"
        android:layout_width="328dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="296dp"
        android:background="@drawable/input_main"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_loadimage"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/purple_800"
        android:backgroundTintMode="add"
        android:text="@string/btn_loadimage"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_name" />

    <Button
        android:id="@+id/btn_edituser"
        android:layout_width="151dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/purple_800"
        android:backgroundTintMode="add"
        android:text="@string/btn_editprofile"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_loadimage" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/name_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email" />

</androidx.constraintlayout.widget.ConstraintLayout>